# NFDRS4

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
app/NFDRS4_cli/: CMakeLists.txt
app/NFDRS4_cli/src/: CNFDRSParams.cpp  RunNFDRS.cpp
data/: NFDRSInitSample.cfg  RunNFDRSSample.cfg
lib/NFDRS4/include/: nfdrs4.h
lib/NFDRS4/src/: nfdrs4.cpp
lib/csv_readrow/include/: csv_readrow.h
lib/fw21/src/: fw21.cpp
tests/: CMakeLists.txt  Lolo241513metFW21.csv  NFDRSInitSample.cfg  RunNFDRSSample.cfg  test_cli.py  test_nfdrs4.cpp
